# TS-app_django

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
main/: settings.py  urls.py
product/: models.py  urls.py  views.py
product/migrations/: 0001_initial.py
product/templates/: base.html  product.html  product_form.html
“/home/wstiehler/.cache/pypoetry/virtualenvs”/: envs.toml
