[tool.poetry]
name = "ts-app_django"
version = "0.1.0"
description = "cadastro de usuarios"
authors = ["wstiehler <william.stiehler@evoluinfo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
binary = "^1.0.0"
postgres = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
